; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_automation.c_Installer_Products.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_automation.c_Installer_Products.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32*, i32* }

@pInstaller = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"Products\00", align 1
@DISPATCH_PROPERTYGET = common dso_local global i32 0, align 4
@VT_DISPATCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @Installer_Products to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Installer_Products(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %2, align 8
  %6 = bitcast %struct.TYPE_3__* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 24, i1 false)
  %7 = load i32, i32* @pInstaller, align 4
  %8 = load i32, i32* @DISPATCH_PROPERTYGET, align 4
  %9 = load i32, i32* @VT_DISPATCH, align 4
  %10 = call i32 @invoke(i32 %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %8, %struct.TYPE_3__* %4, i32* %3, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = call i32* @V_DISPATCH(i32* %3)
  %12 = load i32**, i32*** %2, align 8
  store i32* %11, i32** %12, align 8
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @invoke(i32, i8*, i32, %struct.TYPE_3__*, i32*, i32) #2

declare dso_local i32* @V_DISPATCH(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
